A changelog for recent builds as pasted into the sourceforge page.

Generally created by hand after running:
   hg log -rb2xx: > log.out
However contributors are encouraged to add their own entries for their work.

Since build 218:
----------------
 * Add support for VT_I8 and VT_UI8 when converting a variant into a Python
   object (Stefan Schukat via patch #128)

 * win32com.mapi.exchange
   Added 64-bit support by excluding the 32-bit Ex2kSdk.lib functions from 64-bit builds.
   Unfortunately, this means that only IExchangeManageStore::CreateStoreEntryID
   is currently available in a 64-bit build. (Nick Czeczulin)

* adodbapi updated to version 2.4.3 -- new examples folder includes short programs for
   reading and writing .xls spreadsheets and reading ACCESS .mdb files using SQL.
  New functions .is64bit.Python() and .is64bit.os() to help pick the correct drivers.
  New function .schema_table.names() returns a list of all tables in a database.
   see adodbapi/README.txt for more information.

* Fix issue implementing COM objects from within a virtualenv (Kevin Smyth 
  via issue #3597965)

* win32com.shell
	Add interfaces IFileOperation and IFileOperationProgressSink

* win32com.propsys
	Add interfaces IPropertyChange, IPropertyChangeArray, and IObjectWithPropertyKey
	Add functions PSCreateSimplePropertyChange, PSCreatePropertyChangeArray, and SHSetDefaultProperties

Since build 217:
----------------
* mapiutil.py GetPropTagName has been modified to return the fully qualified
  PT_UNICODE and PT_STRING8 type name. Added optional argument to override
  rawType default in GetMapiTypeName. (Nick Czeczulin)

* Fix the count of replaced terms in Pythonwin's search/replace (rupole).

* Fix obscure issues in the Pythonwin code browser and other uses of the 
  "hierlist" widget (rupole).

* Fix a crash using a COM "record" that holds an array (rupole).

* Fix error return in win32gui.GetClassName (rupole).

* Some misc fixed to win32timezone (Jason R. Coombs).
